Fixed spacing problems

--- a/CommunityService/WebContent/resources/css/main.css
+++ b/CommunityService/WebContent/resources/css/main.css
@@ -40,8 +40,7 @@ body {
 
 #left {
 	width: 270px;
-	position: fixed;
-	margin-top: 66px;
+	
 }
 
 #right {
